<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/my350dp"
    android:layout_height="@dimen/my220dp"
    android:layout_gravity="center"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/my18dp"
        android:textColor="@color/colorBlack"
        android:text="@string/sleep"
        android:gravity="center"
        android:layout_marginTop="@dimen/my20dp"
        android:layout_marginLeft="@dimen/my20dp"/>

    <RadioGroup
        android:id="@+id/Sleep_rg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/my14dp">
        <RadioButton
            android:id="@+id/sleep_rb1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@drawable/radiobtn_selector"
            android:background="@color/transparentss"
            android:paddingLeft="@dimen/my10dp"
            android:text="@string/min1"
            android:textSize="@dimen/my14dp"
            android:textColor="@color/colorBlack"/>
        <RadioButton
            android:id="@+id/sleep_rb2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/my12dp"
            android:button="@drawable/radiobtn_selector"
            android:background="@color/transparentss"
            android:paddingLeft="@dimen/my10dp"
            android:text="@string/min2"
            android:textSize="@dimen/my14dp"
            android:textColor="@color/colorBlack"/>
        <RadioButton
            android:id="@+id/sleep_rb3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/my12dp"
            android:button="@drawable/radiobtn_selector"
            android:background="@color/transparentss"
            android:paddingLeft="@dimen/my10dp"
            android:text="@string/min3"
            android:textSize="@dimen/my14dp"
            android:textColor="@color/colorBlack"/>
        <RadioButton
            android:id="@+id/sleep_rb4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/my12dp"
            android:button="@drawable/radiobtn_selector"
            android:background="@color/transparentss"
            android:paddingLeft="@dimen/my10dp"
            android:text="@string/min4"
            android:textSize="@dimen/my14dp"
            android:textColor="@color/colorBlack"/>
        <RadioButton
            android:id="@+id/sleep_rb5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/my12dp"
            android:button="@drawable/radiobtn_selector"
            android:background="@color/transparentss"
            android:paddingLeft="@dimen/my10dp"
            android:text="@string/Never"
            android:textSize="@dimen/my14dp"
            android:textColor="@color/colorBlack" />
    </RadioGroup>

</LinearLayout>