<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/Linear_userlogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_yellow_pic"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center_horizontal">
        <EditText
            android:id="@+id/et_loginName"
            android:layout_width="@dimen/my400dp"
            android:layout_height="@dimen/my50dp"
            android:background="@color/colorWhite"
            android:layout_marginTop="@dimen/my150dp"
            android:paddingLeft="@dimen/my10dp"
            android:hint="@string/Email"
            android:textColorHint="@color/colorGray"
            android:textSize="@dimen/my16dp"
            android:textColor="@color/colorBlack2"
            android:textCursorDrawable="@null"  />
        <EditText
            android:id="@+id/et_loginPassword"
            android:layout_width="@dimen/my400dp"
            android:layout_height="@dimen/my50dp"
            android:layout_marginTop="@dimen/my10dp"
            android:background="@color/colorWhite"
            android:paddingLeft="@dimen/my10dp"
            android:hint="@string/Password"
            android:textColorHint="@color/colorGray"
            android:textSize="@dimen/my16dp"
            android:textColor="@color/colorBlack2"
            android:textCursorDrawable="@null"  />
        <Button
            android:id="@+id/btn_login"
            android:layout_width="@dimen/my400dp"
            android:layout_height="@dimen/my50dp"
            android:layout_marginTop="@dimen/my10dp"
            android:background="@color/colorGreen"
            android:text="@string/Login"
            android:textSize="@dimen/my20dp"
            android:textColor="@color/colorWhite"/>
        <RelativeLayout
            android:layout_width="@dimen/my400dp"
            android:layout_height="@dimen/my50dp"
            android:layout_marginTop="@dimen/my10dp">
            <TextView
                android:id="@+id/tv_register"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:gravity="center"
                android:text="@string/Register"
                android:textColor="@color/colorGray"
                android:textSize="@dimen/my24dp"/>
            <TextView
                android:id="@+id/tv_forget"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:text="@string/ForgotPassword"
                android:textColor="@color/colorGray"
                android:textSize="@dimen/my24dp"/>
        </RelativeLayout>
        <ImageView
            android:id="@+id/facebook"
            android:layout_width="@dimen/my50dp"
            android:layout_height="@dimen/my50dp"
            android:background="@drawable/facebook"/>

    </LinearLayout>
</LinearLayout>