<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/video_img"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"/>

    <io.vov.vitamio.widget.VideoView
        android:id="@+id/liveVideo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/control_slope"
        android:layout_width="@dimen/my80dp"
        android:layout_height="@dimen/my210dp"
        android:layout_marginTop="@dimen/my150dp"
        android:layout_marginLeft="@dimen/my30dp"
        android:background="@drawable/running_adjust_bg"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_running3_slope_add"
            android:layout_width="match_parent"
            android:layout_height="@dimen/my70dp"
            android:gravity="center"
            android:background="@drawable/btn_add_false"
            android:text="+"
            android:textSize="@dimen/my50dp"
            android:textColor="@color/colorWhite"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/my70dp"
            android:gravity="center"
            android:text="@string/incline"
            android:textSize="@dimen/my16dp"
            android:textColor="@color/colorWhite"/>
        <Button
            android:id="@+id/btn_running3_slope_minus"
            android:layout_width="match_parent"
            android:layout_height="@dimen/my70dp"
            android:gravity="center"
            android:background="@drawable/btn_minus_false"
            android:text="—"
            android:textSize="@dimen/my36dp"
            android:textColor="@color/colorWhite" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/control_speed"
        android:layout_width="@dimen/my80dp"
        android:layout_height="@dimen/my210dp"
        android:layout_marginTop="@dimen/my150dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/my30dp"
        android:background="@drawable/running_adjust_bg"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_running3_speed_add"
            android:layout_width="match_parent"
            android:layout_height="@dimen/my70dp"
            android:gravity="center"
            android:background="@drawable/btn_add_false"
            android:text="+"
            android:textSize="@dimen/my50dp"
            android:textColor="@color/colorWhite"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/my70dp"
            android:gravity="center"
            android:text="@string/speed"
            android:textSize="@dimen/my16dp"
            android:textColor="@color/colorWhite"/>
        <Button
            android:id="@+id/btn_running3_speed_minus"
            android:layout_width="match_parent"
            android:layout_height="@dimen/my70dp"
            android:gravity="center"
            android:background="@drawable/btn_minus_false"
            android:text="—"
            android:textSize="@dimen/my36dp"
            android:textColor="@color/colorWhite" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/control_stop_pause"
        android:layout_width="@dimen/my250dp"
        android:layout_height="@dimen/my80dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/my70dp">

        <Button
            android:id="@+id/running3_ing"
            android:layout_width="@dimen/my0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorGreen"
            android:text="@string/Start"
            android:textSize="@dimen/my28dp"
            android:textColor="@color/colorWhite"/>
        <Button
            android:id="@+id/running3_stop"
            android:layout_width="@dimen/my0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorRed"
            android:text="@string/main_mode_stop"
            android:textSize="@dimen/my28dp"
            android:textColor="@color/colorWhite"
            android:visibility="gone"/>
        <Button
            android:id="@+id/running3_pause"
            android:layout_width="@dimen/my0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorOrange"
            android:text="@string/main_mode_pause"
            android:textSize="@dimen/my28dp"
            android:textColor="@color/colorWhite"
            android:visibility="gone"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/control_stopping"
        android:layout_width="@dimen/my250dp"
        android:layout_height="@dimen/my80dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/my70dp"
        android:visibility="gone">
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorRed"
            android:text="@string/main_mode_stopping"
            android:textSize="@dimen/my28dp"
            android:textColor="@color/colorWhite"/>
        </LinearLayout>
</RelativeLayout>